<resources>
    <string name="app_name">Final_Evaluation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginFragment">LoginFragment</string>
    <string name="login">Login</string>
    <string name="homeFragment">HomeFragment</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="id">Id</string>
    <string name="required">required</string>
    <string name="title">Title</string>
    <string name="photo">Photo</string>
    <string name="details">Details</string>
    <string name="textview">TextView</string>
    <string name="title_of_list">Title</string>
</resources>