<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="160dp"
            android:text="@string/details"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_detailed"
            android:layout_width="283dp"
            android:layout_height="115dp"
            android:layout_marginStart="84dp"
            android:layout_marginBottom="108dp"
            android:text="@string/textview"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="184dp"
            android:layout_marginBottom="22dp"
            android:text="@string/title_of_list"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/title_detailed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="124dp"
            android:text="@string/id"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/id_detailed"
            android:layout_width="208dp"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="172dp"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/title_detailed"
            app:layout_constraintStart_toEndOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>